use hash to store itineraries rather than using two seperate string keys