@@ -1,5 +1,6 @@
 package com.codrshi.smart_itinerary_planner.common.aspect;
 
+import com.codrshi.smart_itinerary_planner.common.Constant;
 import com.codrshi.smart_itinerary_planner.config.ItineraryProperties;
 import com.codrshi.smart_itinerary_planner.dto.IActivityDTO;
 import com.codrshi.smart_itinerary_planner.dto.implementation.ActivityDTO;
@@ -7,7 +8,6 @@ import com.codrshi.smart_itinerary_planner.dto.implementation.response.GetItiner
 import com.codrshi.smart_itinerary_planner.dto.response.IItineraryResponseDTO;
 import com.codrshi.smart_itinerary_planner.exception.ResourceNotFoundException;
 import com.codrshi.smart_itinerary_planner.util.FactoryUtil;
-import com.codrshi.smart_itinerary_planner.util.generator.redis.ActivityRedisKeyGenerator;
 import com.codrshi.smart_itinerary_planner.util.generator.redis.ItineraryRedisKeyGenerator;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import lombok.extern.slf4j.Slf4j;
@@ -23,9 +23,8 @@ import org.springframework.stereotype.Component;
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 
 @Aspect
 @Component
@@ -44,10 +43,9 @@ public class GetItineraryCacheAspect {
     @Around(value = "execution(* com.codrshi.smart_itinerary_planner.service.implementation.GetItineraryService.getItinerary(..)) && args(itineraryId)")
     public Object cacheGetItinerary(ProceedingJoinPoint joinPoint, String itineraryId) throws JsonProcessingException {
 
-        String idRedisKey = ItineraryRedisKeyGenerator.generateWithItineraryId(itineraryId);
-        String activitiesRedisKey = ActivityRedisKeyGenerator.generate(itineraryId);
+        String idRedisKey = ItineraryRedisKeyGenerator.generate(itineraryId);
 
-        IItineraryResponseDTO responseDTO = fromCache(idRedisKey, activitiesRedisKey);
+        IItineraryResponseDTO responseDTO = fromCache(idRedisKey);
 
         if(responseDTO != null) {
             log.debug("CACHE HIT: cached itinerary found for itineraryId = {}", itineraryId);
@@ -63,36 +61,44 @@ public class GetItineraryCacheAspect {
             throw new RuntimeException(e);
         }
 
-        cacheResponse(idRedisKey, activitiesRedisKey, factoryUtil.copy(responseDTO, GetItineraryResponseDTO.class));
+        cacheResponse(idRedisKey, factoryUtil.copy(responseDTO, GetItineraryResponseDTO.class));
 
         return responseDTO;
     }
 
-    private IItineraryResponseDTO fromCache(String idRedisKey, String activitiesRedisKey) {
-        IItineraryResponseDTO responseDTO = (GetItineraryResponseDTO) redisTemplate.opsForValue().get(idRedisKey);
-        List<IActivityDTO> activities = new ArrayList<>(
-                        Optional.ofNullable((List<ActivityDTO>) redisTemplate.opsForValue().get(activitiesRedisKey))
-                .orElse(Collections.emptyList()));
+    private IItineraryResponseDTO fromCache(String idRedisKey) {
+        List<Object> values = redisTemplate.opsForHash().multiGet(
+                idRedisKey,
+                List.of(Constant.ITINERARY_KEY_METADATA, Constant.ITINERARY_KEY_ACTIVITIES));
 
-        if(responseDTO != null) {
-            responseDTO.setActivities(activities);
+        Object metadataRaw = values.get(0);
+        Object activitiesRaw = values.get(1);
+
+        if(metadataRaw == null || activitiesRaw == null) {
+            return null;
         }
 
+        GetItineraryResponseDTO responseDTO = (GetItineraryResponseDTO) metadataRaw;
+        List<ActivityDTO> activities = (List<ActivityDTO>) activitiesRaw;
+        responseDTO.setActivities(new ArrayList<>(activities));
         return responseDTO;
     }
 
-    private void cacheResponse(String idRedisKey, String activitiesRedisKey, IItineraryResponseDTO responseDTO) {
+    private void cacheResponse(String idRedisKey, IItineraryResponseDTO responseDTO) {
 
         List<IActivityDTO> activities = responseDTO.getActivities();
         responseDTO.setActivities(null);
+
+        Map<String, Object> map = Map.of(Constant.ITINERARY_KEY_METADATA, responseDTO,
+                                         Constant.ITINERARY_KEY_ACTIVITIES, activities);
 
         redisTemplate.execute(new SessionCallback<>() {
             @Override
             public Object execute(RedisOperations operations) throws DataAccessException {
                 operations.multi();
 
-                operations.opsForValue().set(idRedisKey, responseDTO, Duration.ofDays(itineraryProperties.getRedis().getItineraryTtl()));
-                operations.opsForValue().set(activitiesRedisKey, activities, Duration.ofDays(itineraryProperties.getRedis().getItineraryTtl()));
+                operations.opsForHash().putAll(idRedisKey, map);
+                operations.expire(idRedisKey, Duration.ofDays(itineraryProperties.getRedis().getItineraryTtl()));
 
                 return operations.exec();
             }
